<resources>
    <string name="app_name">Show Time</string>
    <string name="movie_image">movie image</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="overview">Overview</string>
    <string name="popularity">Popularity</string>
    <string name="for_adults">For adults</string>
    <string name="total_votes">Total votes</string>
    <string name="release_date">Release Date</string>
    <string name="similar_shows">Similar Shows</string>
    <string name="related_shows">Related Shows</string>
    <string name="popular">Popular</string>
    <string name="movies">Movies</string>
    <string name="trending">Trending</string>
    <string name="top_rated">Top Rated</string>
    <string name="tv">TV</string>
    <string name="your_name">Your Name</string>
    <string name="upcoming">Upcoming</string>
    <string name="airing_today">Airing Today</string>
    <string name="search">Search</string>
</resources>